crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests/snapshots/crucible_cli__tui__oil__tests__chat_app_snapshot_tests__interaction_modal_snapshots__snapshot_ask_modal_free_text_only.snap
---
source: crates/crucible-cli/src/tui/oil/tests/chat_app_snapshot_tests.rs
assertion_line: 1020
expression: render_app(&app)
---
                                                                                
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
 Enter your custom value:                                                       
 > Other...                                                                     
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
 ↑/↓ navigate │ Enter select │ Esc cancel
